src/scss/_main.scss
/* ... */
.step .-view.-running {
  border-color: var(--color-yellow);
}

.step .-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.step .-info .-duration {
  font-family: var(--font-code);
}

.loading-logs {
  margin-top: 0.3em;
  margin-left: 0.3em;
  padding: 0.5em 0;
}

.logs-container {
  margin-right: -1rem;
  margin-left: -1rem;
  padding: 0.5em 0;

  background-color: var(--color-bg-dark);
}

.logs {
  font-weight: 300;
  font-size: 14px;
}

.log-table {
  table-layout: fixed;
  width: 100%;
}

.logs .line {
  display: flex;
  align-items: flex-start;
  margin: 0 0.5em;
}

.line .wrapper {
  display: flex;
  flex: 1;
  flex-direction: row;

  > code {
    flex: 1;
    margin-left: 1em;
  }
}

.line-number {
  padding: 0;
  position: relative;
  color: var(--color-primary);
  font-size: 14px;
  font-family: var(--font-code);

  background: none;
  border: none;

  user-select: none;

  width: 6ch;
}

.logs .-focus {
  background: var(--color-focus);
}

.line a {
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: underline;
  }
}

.no-logs {
  margin-left: 1.5em;
}

.step-error,
.step-skipped {
  margin-left: 1.5em;

  color: var(--color-red-light);
  font-size: 14px;
}

.step-error .message,
.step-skipped .message {
  margin-left: 0.2em;
}

.animated {
  animation-duration: 1s;

  animation-fill-mode: both;
}

// used by pablen/toasty Elm package
// stylelint-disable-next-line
.bounceInRight {
  animation-name: bounceInRight;
}

// used by pablen/toasty Elm package
// stylelint-disable-next-line
.fadeOutRightBig {
  animation-name: fadeOutRightBig;
}

.alerts {
  ol {
    display: flex;
    flex-direction: column-reverse;
  }

  li {
    flex: 0 0 auto;
  }
}

.alert-container-attributes {
  position: fixed;
  right: 0;
  bottom: 10px;

  width: 100%;
  max-width: 530px;
  margin: 0;
  padding: 0;

  list-style-type: none;
}

.alert-item-attributes {
  max-height: 100px;
  margin: 1em 1em 0 1em;

  // stylelint-disable-next-line
  transition: max-height 1.2s, margin-top 1.2s;
}

.alert-container {
  width: 500px;
  padding: 1em;

  color: var(--color-text);

  font-size: 14px;

  background-color: var(--color-bg-dark);
  border-radius: 5px;
  border-radius: 0;
  box-shadow: 0 5px 5px -5px hsla(0, 0%, 0%, 0.5);

  cursor: pointer;
}

.alert-container .-title {
  display: flex;

  justify-content: space-between;
  margin: 0;

  font-size: 1em;
}

.alert-container .-message {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  max-height: 3.25em;
  margin-top: 0.25em;
  margin-bottom: 0;
  overflow-y: auto;

  font-size: 0.9em;
}

.alert-container.-success {
  border: 1px solid var(--color-green);
}

.alert-container.-warning {
  border: 1px solid var(--color-yellow);
}

.alert-container.-error {
  border: 1px solid var(--color-red);
}

.-icon {
  fill: none;
  stroke: var(--color-primary);

  &.-check {
    background-color: var(--color-primary);

    stroke: var(--color-bg);
  }

  &.-check,
  &.-radio {
    fill: none;
  }

  &.-success {
    stroke: var(--color-green);
  }

  &.-running {
    stroke: var(--color-yellow);
  }

  &.-failure,
  &.-error {
    stroke: var(--color-red);
  }

  &.-pending {
    fill: var(--color-bg-light);
    stroke: var(--color-bg-light);
  }

  .-inner {
    fill: var(--color-primary);
  }

  &.-skip {
    stroke: var(--color-lavender);
  }
}

.pager-actions {
  display: flex;
  justify-content: space-between;
}

.pager-icon-next svg {
  margin-right: 0; // override global margin on svgs in buttons
  margin-left: 0.5em;
}

.icon.favorite-star {
  fill: none;
  stroke: var(--color-yellow);
  stroke-width: var(--line-width);
}

.icon.favorite-star.favorited {
  fill: var(--color-yellow);
}

.builds-favorite {
  display: flex;
  align-items: center;
}

// general utility class for callouts
.notice {
  padding: 1rem;

  font-size: 1rem;

  background: var(--color-bg-light);
}

// style for contextual help dropdown
.help {
  position: relative;
}

.tooltip {
  position: absolute;
  top: 1.8rem;
  right: 0;
  z-index: 999999;

  min-width: 400px;
  padding: 1rem;

  font-weight: normal;
  font-size: 0.8rem;

  background: var(--color-bg-dark);
  border: solid var(--line-width) var(--color-bg-light);

  // triangle tip
  &::after {
    display: block;
    position: absolute;
    content: '';
    top: -0.5rem;
    right: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 0 0.5rem 0.5rem 0.5rem;
    border-bottom-color: var(--color-bg-light);
  }
}

.cmd {
  display: flex;
  justify-content: space-between;
}

.cmd-text {
  border: none;
  padding: 0.5rem;
  margin: 0.2rem 0;
  color: var(--color-text);
  background-color: var(--color-bg);
  flex: 1;

  + .button {
    margin-left: 0.5rem;
  }
}

.help.details .summary {
  overflow: initial;
}

/* stylelint-disable selector-max-specificity */
.help.details[open] .summary + *:first-of-type {
  margin-top: 0.25rem;
}
/* stylelint-enable selector-max-specificity */

.help-footer {
  display: flex;
  justify-content: flex-end;
  margin: 1rem 0.5rem 0 1rem;

  > a {
    margin-left: 1rem;
  }
}

.help-footer div {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin-top: 8px;
  margin-right: 8px;

  > a {
    margin-left: 6px;

    text-align: right;
  }
}

.copy-display {
  padding: 0.5rem;

  color: var(--color-text);

  background-color: var(--color-bg-dark);

  border: none;
}

// class for basic list styling
.list {
  font-size: 1rem;

  li {
    margin-bottom: 1rem;
  }
}
/* ... */

